# sukker

./: .gitignore  Cargo.toml  README.md  t.rs
.github/workflows/: test.yml
benches/: blocked_matmul_benches.rs  matmul_benches.rs  nn_sparse_matmul.rs  sparse_matmul.rs  sparse_mnnp_bench.rs  sparse_nn_bench.rs
examples/: fromfile.rs  linalg.rs  matmul.rs  matrixops.rs  predicates.rs  sparse.rs  sparse_medium.rs
src/: common.rs  constants.rs  lib.rs
src/matrix/: determinant_helpers.rs  helper.rs  mod.rs  old.rs
src/sparse/: helper.rs  mod.rs
tests/: matrix.rs  sparse.rs
