[package]
name = "sukker"
version = "1.3.0"
edition = "2021"
authors = ["Joergen Aleksander Fagervik <jorgenafagervik@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Matrices in rust"
repository = "https://github.com/Jafagervik/sukker.git"

keywords = ["ai","matrix",  "numpy"]
categories = ["mathematics", "science"]

[dependencies]
anyhow = "1.0.71"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "matmul_benches"
harness = false

